Update hard keyboard status on closing input methods panel
Bug: 3391067
Change-Id: Ib337cea0031020ab7ca019b30cd2ceb47a7664d5

--- a/packages/SystemUI/res/layout-xlarge/status_bar_input_methods_panel.xml
+++ b/packages/SystemUI/res/layout-xlarge/status_bar_input_methods_panel.xml
@@ -22,7 +22,8 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:paddingBottom="28dip"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="gone">
     <View
         android:layout_width="match_parent"
         android:layout_height="0dip"
