Enable retrieving default download manager settings
Enable retrieving the default download manager settings from
a resource, when the SettingsProvider database is created

The default setting for these values is -1, which will cause
DownloadManger to not enforce a limit.

Bug: 3341145
Change-Id: I25294d0f75fb0bdf20d4bef54457056c25c31add

--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -116,4 +116,9 @@
 
     <!-- Default for Settings.System.USER_ROTATION -->
     <integer name="def_user_rotation">0</integer>
+
+    <!-- Default for Settings.Secure.DOWNLOAD_MAX_BYTES_OVER_MOBILE. <=0 if no limit -->
+    <integer name="def_download_manager_max_bytes_over_mobile">-1</integer>
+    <!-- Default for Settings.Secure.DOWNLOAD_RECOMMENDED_MAX_BYTES_OVER_MOBILE. <=0 if no limit -->
+    <integer name="def_download_manager_recommended_max_bytes_over_mobile">-1</integer>
 </resources>
