--- a/packages/SystemUI/res/layout-xlarge/status_bar_notification_area.xml
+++ b/packages/SystemUI/res/layout-xlarge/status_bar_notification_area.xml
@@ -108,6 +108,12 @@
             android:orientation="horizontal"
             android:gravity="center"
             >
+            <ImageView
+                android:id="@+id/bluetooth"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:visibility="gone"
+                />
             <FrameLayout
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
@@ -120,6 +126,11 @@
                     />
                 <ImageView
                     android:id="@+id/network_type"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    />
+                <ImageView
+                    android:id="@+id/network_direction"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     />
