two digit number handling in croatia and serbia
If users dial 92-96, dial them normally and not treat
as USSD

Change-Id: If3b6cb37b7ec0ff99d76cb10cba53368094a0b5d
Signed-off-by: sj2202.park@samsung.com

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -373,4 +373,8 @@
     <!-- Boolean indicating if restoring network selection should be skipped -->
     <!-- The restoring is handled by modem if it is true-->
     <bool translatable="false" name="skip_restoring_network_selection">false</bool>
+
+    <!-- Do not translate. Defines the slots is Two Digit Number for dialing normally not USSD -->
+    <string-array name="config_twoDigitNumberPattern">
+    </string-array>
 </resources>
