Time to take down the Christmas lights.
Bug: 3420764
Change-Id: Ie76341f165f8232efdcc90af66776751117b443a

--- a/packages/SystemUI/res/layout-xlarge/status_bar_notification_panel_title.xml
+++ b/packages/SystemUI/res/layout-xlarge/status_bar_notification_panel_title.xml
@@ -116,12 +116,12 @@
         android:id="@+id/notification_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/icons"
         android:layout_alignParentRight="true"
-        android:layout_alignBaseline="@id/battery"
         android:paddingRight="16dp"
-        android:visibility="invisible"
         android:src="@drawable/ic_notification_open"
         android:baseline="21dp"
+        android:visibility="invisible"
         />
 
     <View
