--- a/packages/SystemUI/res/layout-xlarge/status_bar_notification_area.xml
+++ b/packages/SystemUI/res/layout-xlarge/status_bar_notification_area.xml
@@ -41,6 +41,15 @@
             android:src="@drawable/ic_sysbar_ime_default"
             android:visibility="gone"
             />
+        
+        <com.android.systemui.statusbar.tablet.ShirtPocket
+            android:id="@+id/shirt_pocket"
+            android:layout_width="@*android:dimen/status_bar_height"
+            android:layout_height="@*android:dimen/status_bar_height"
+            android:background="#FFFF0000"
+            android:visibility="gone"
+            />
+
         <com.android.systemui.statusbar.tablet.NotificationIconArea
             android:id="@+id/notificationIcons"
             android:layout_width="wrap_content"
